--- a/Code/WPF-Project.csproj
+++ b/Code/WPF-Project.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
   </ItemGroup>
 
+  <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+    <Copy SourceFiles="ElloApp.db" DestinationFolder="$(OutDir)" />
+  </Target>
+
 </Project>
